// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessagesList renders correctly for computers/tablets 1`] = `
<ul
  className="MuiList-root css-1hmk0ua-MessagesList MuiList-padding"
>
  <div>
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button MuiListItem-alignItemsFlexStart"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root MuiListItemIcon-alignItemsFlexStart"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root css-17ns6yi"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
          />
        </svg>
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          John Brown
          <text
            className="css-1qwyti7"
          >
            Hier
          </text>
        </span>
        <p
          className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          <p
            className="MuiTypography-root css-1u80o7b MuiTypography-body1"
          >
            Message sur votre vitrine MeilleursAgents
          </p>
          <p
            className="MuiTypography-root css-1u80o7b MuiTypography-body2"
          >
            Lorem Ipsum #10156 is simply dummy text of the printing and typesetting industry. Lorem Ipsum has...
          </p>
        </p>
      </div>
    </div>
    <li
      className="MuiDivider-root MuiDivider-inset"
      role="separator"
    />
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button MuiListItem-alignItemsFlexStart"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root MuiListItemIcon-alignItemsFlexStart"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root css-17ns6yi"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
          />
        </svg>
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          John Doe
          <text
            className="css-1qwyti7"
          >
            Hier
          </text>
        </span>
        <p
          className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          <p
            className="MuiTypography-root css-1u80o7b MuiTypography-body1"
          >
            Message sur votre vitrine MeilleursAgents
          </p>
          <p
            className="MuiTypography-root css-1u80o7b MuiTypography-body2"
          >
            Lorem Ipsum #10157 is simply dummy text of the printing and typesetting industry. Lorem Ipsum has...
          </p>
        </p>
      </div>
    </div>
    <li
      className="MuiDivider-root MuiDivider-inset"
      role="separator"
    />
  </div>
  <h6
    className="MuiTypography-root css-hnt4kv-MessagesList MuiTypography-h6"
  >
    Pas de messages supplémentaires.
  </h6>
</ul>
`;

exports[`MessagesList renders correctly for smartphones 1`] = `
<ul
  className="MuiList-root css-1hmk0ua-MessagesList MuiList-padding"
>
  <div>
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button MuiListItem-alignItemsFlexStart"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root MuiListItemIcon-alignItemsFlexStart"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root css-17ns6yi"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
          />
        </svg>
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          John Brown
          <text
            className="css-1qwyti7"
          >
            Hier
          </text>
        </span>
        <p
          className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          <p
            className="MuiTypography-root css-1u80o7b MuiTypography-body1"
          >
            Message sur votre vitrine MeilleursAgents
          </p>
          <p
            className="MuiTypography-root css-1u80o7b MuiTypography-body2"
          >
            Lorem Ipsum #10156 is simply dummy text of the printing and typesetting industry. Lorem Ipsum has...
          </p>
        </p>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </div>
    <li
      className="MuiDivider-root MuiDivider-inset"
      role="separator"
    />
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button MuiListItem-alignItemsFlexStart"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root MuiListItemIcon-alignItemsFlexStart"
      >
        <svg
          aria-hidden={true}
          className="MuiSvgIcon-root css-17ns6yi"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"
          />
        </svg>
      </div>
      <div
        className="MuiListItemText-root MuiListItemText-multiline"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          John Doe
          <text
            className="css-1qwyti7"
          >
            Hier
          </text>
        </span>
        <p
          className="MuiTypography-root MuiListItemText-secondary MuiTypography-body2 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          <p
            className="MuiTypography-root css-1u80o7b MuiTypography-body1"
          >
            Message sur votre vitrine MeilleursAgents
          </p>
          <p
            className="MuiTypography-root css-1u80o7b MuiTypography-body2"
          >
            Lorem Ipsum #10157 is simply dummy text of the printing and typesetting industry. Lorem Ipsum has...
          </p>
        </p>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </div>
    <li
      className="MuiDivider-root MuiDivider-inset"
      role="separator"
    />
  </div>
  <h6
    className="MuiTypography-root css-hnt4kv-MessagesList MuiTypography-h6"
  >
    Pas de messages supplémentaires.
  </h6>
</ul>
`;
